modify voyager 1 blog

--- a/_posts/2022-08-16-voyager1.md
+++ b/_posts/2022-08-16-voyager1.md
@@ -135,7 +135,9 @@ $$
     1.66\times 10^{-21}\,\textrm{W} = -177.81\,\textrm{dBm}
 $$
 
-The above assumes a receiver temperature of 120 Kelvin at 8.4 GHz.
+The above assumes a receiver temperature of 120 Kelvin at 8.4 GHz. The 
+receiver temperature could have also been measured using the quasar observation, 
+but the 120 Kelvin figure is not far from reality given previous measurements.
 
 
 Finally, the expected carrier-to-noise ratio is:
