minor modifications to site

--- a/_posts/2022-08-16-voyager1.md
+++ b/_posts/2022-08-16-voyager1.md
@@ -56,7 +56,7 @@ A beamformer, in the recieving paradigm, is the process of coherently summing
 multiple receptors in order to maximize their sensitivity towards a particular 
 spatial direction. Beamforming is a very rich topic and I won’t go into details 
 here, but in short, a beamformer requires a calibration scheme to compute the 
-instrumental delays and phases (with respect to a reference) of each station 
+instrumental delays and phases for each station 
 of an array. For the ATA beamformer system, we utilize a correlator – a software 
 suit that multiplies signals from each pair of antennas together – to derive the 
 needed delay and phase solutions.
@@ -65,16 +65,18 @@ needed delay and phase solutions.
 On July 9th, 2022, the 20 available antennas of the Allen Telescope Array were used to 
 observe the Voyager 1 space probe. The coherent downlink frequency of Voyager 1, in the X-band, 
 is ~8420.43 MHz, with a spectral width of <1 Hz. The ATA was tuned at a center 
-frequency of 8400 MHz (the beamformer's bandwidth is relatively large, 672 MHz). 
-No DSN observations were underway at the the time of the ATA observation, 
+frequency of 8400 MHz (the beamformer's bandwidth, for each tuning, is relatively large, 672 MHz). 
+No observations with the DSN were underway at the the time of the ATA observation, 
 therefore I assume no two-way communication mode has been set, and the transponder 
-is not locked to the uplink frequency.
-Ten minutes of data on a nearby quasar were collected using the correlator, 
+was not locked to the uplink frequency.
+Ten minutes of data on a nearby quasar[^1] were collected using the correlator, 
 and a delay/phase solution was derived for the beamformer. The antennas were then 
 pointed at the position of Voyager 1 as determined using the ephemeris obtained 
 from the solar system dynamics NASA/JPL [webpage](https://ssd.jpl.nasa.gov/horizons/app.html)
 (ICRF RA = 17:13:41.13, Dec = +12:23:49.9). Fifteen minutes of beamformed complex baseband 
 data were then recorded and stored on disk.
+
+[^1]: An accreting supermassive blackhole that emits continuum light over a very broad range of radio frequencies. Due to this property, quasars are often used as delay, phase, and flux calibrators for radio interferometers.
 
 ## Data Analysis
 A large, ~500,000 point FFT was applied to the recorded data to bring the spectral resolution to a 
@@ -84,7 +86,7 @@ frequency will inevitably be Doppler shifted and drifting in time. The Doppler s
 was then calculated (thanks [Danni Estévez](https://destevez.net/)), 
 and a waterfall plot of one of polarization was displayed. 
 The figure below shows the dynamic spectrum of
-the Voyager 1 downlink signal.v
+the Voyager 1 downlink signal.
 
 ![Voyager1](../../assets/img/voyager_waterfall.png)
 *A waterfall (frequency vs time) plot displaying the Voyager 1 spacecraft 
