another try to get twitter card working

--- a/_posts/2022-08-16-voyager1.md
+++ b/_posts/2022-08-16-voyager1.md
@@ -11,6 +11,7 @@ header:
     caption: "Artist’s impression of Voyager 1 (Credit: NASA/JPL-Caltech)"
     caption_url: ""
 image:
+    title: voyager1
     thumb:  ../assets/img/voyager1.png
     homepage: ../assets/img/voyager1.png 
     caption: "Artist’s impression of Voyager 1 (Credit: NASA/JPL-Caltech)"
