Minor edits to voyager post

--- a/_posts/2022-08-16-voyager1.md
+++ b/_posts/2022-08-16-voyager1.md
@@ -47,14 +47,14 @@ This write-up describes the observation and detection of the Voyager 1 carrier
 signal using the Allen Telescope Array.
 
 ## The refurbishment of the Allen Telescope Array
-The Allen Telescope Array is an interferometer hosted at the Hat Creek Radio Observatory, some 5-hour drive north of San Francisco. The telescope comprises 42 fully-steerable 6.1m-diameter telescopes, of which ~20 are fitted with wideband cryogenically cooled feeds. The feeds sense electromagnetic waves within the frequency range of 1 to 12 GHz. A refurbishment program has been underway since early 2019 aimed at upgrading the feeds along with the digital signal processing hardware and software. As part of the ongoing refurbishment, a new digital correlator and beamformer based on commodity CPUs and GPUs is being developed and installed.
+The Allen Telescope Array is an interferometer hosted at the Hat Creek Radio Observatory ([HCRO](https://www.seti.org/hcro)), some 5-hour drive north of San Francisco. The telescope comprises 42 fully-steerable 6.1m-diameter telescopes, of which ~20 are fitted with wideband cryogenically cooled feeds. The feeds sense electromagnetic waves within the frequency range of 1 to 12 GHz. A refurbishment program has been underway since early 2019 aimed at upgrading the feeds along with the digital signal processing hardware and software. As part of the ongoing refurbishment, a new digital correlator and beamformer based on commodity CPUs and GPUs are being developed and installed.
 
 ![ATA](../../assets/img/ATA2.jpeg)
 *The Allen Telescope Array (Credit: Joe Marfia)*
 
 A beamformer, in the recieving paradigm, is the process of coherently summing
 multiple receptors in order to maximize their sensitivity towards a particular 
-spatial direction. Beamforming is a very rich topic and I won’t go into details 
+spatial direction. Beamforming is a very rich topic and I will not go into details 
 here, but in short, a beamformer requires a calibration scheme to compute the 
 instrumental delays and phases for each station 
 of an array. For the ATA beamformer system, we utilize a correlator – a software 
@@ -66,7 +66,7 @@ On July 9th, 2022, the 20 available antennas of the Allen Telescope Array were u
 observe the Voyager 1 space probe. The coherent downlink frequency of Voyager 1, in the X-band, 
 is ~8420.43 MHz, with a spectral width of <1 Hz. The ATA was tuned at a center 
 frequency of 8400 MHz (the beamformer's bandwidth, for each tuning, is relatively large, 672 MHz). 
-Even though the DSN station at Golstone was receiving the downlink at the the time of the ATA observation, 
+Even though the DSN station at Goldstone was receiving the downlink at the the time of the ATA observation, 
 I assume no two-way communication mode has been set, and the transponder 
 was not locked to the uplink frequency; telecommands are rarely issued to the spacecraft nowadays.
 Ten minutes of data on a nearby quasar[^1] were collected using the correlator, 
@@ -113,7 +113,7 @@ $$
         = 2.07 \times 10^{-22}\,\textrm{W.m}^{-2}
 $$
 
-Next, we’ll calculate the received power by the ATA beamformer. We use N_ant = 20 
+Next, we calculate the received power by the ATA beamformer. We use N_ant = 20 
 antennas in our 
 observation, each antenna is ~6m in diameter with an aperture efficiency of 
 ~0.6 in the X-band:
@@ -124,13 +124,13 @@ $$
     A = N_{ant} \times \pi \times r^2 \times \epsilon_A = 339.3\,\textrm{m}^2
 $$
 
-Power received:
+The power received from Voyager 1 will then be:
 
 $$
     P = P_D \times A = 7.03 \times 10^{-20}\,\textrm{W} = -161.53\,\textrm{dBm}
 $$
 
-Next, we’ll calculate the ATA thermal noise:
+Next, we calculate the ATA thermal noise:
 
 $$
     N_0 = k_B \times T_{rec} \times BW = 1.38\times 10^{-23} \times 120 \times 1 = 
@@ -163,7 +163,7 @@ was assumed to have perfect efficiency, which is not the case in real-world scen
 The detection of Voyager 1, the farthest human-made object, with the refurbished 
 Allen Telescope Array is an excellent display of the telescope’s capabilities 
 and strengths, and a representation of the outstanding hard work put 
-by the ATA team since the start of the refurbishment program in 2019
+by the ATA team since the start of the refurbishment program in 2019.
 
 
 </div><!-- /.medium-8.columns -->
